# flib

./: CMakeLists.txt  README.md
inc/: BMP.hpp  file.hpp  image.hpp  serializer.hpp  types.hpp
src/: BMP.cpp  file.cpp  image.cpp
src/py_bind/: py_bind.cpp
test/: main.cpp
